Lots of edits, esp to text analysis

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -10341,3 +10341,10 @@ doi = {10.1177/0956797618808470}
   year={2010},
   publisher={Springer}
 }
+@manual{lenth2020,
+    title = {emmeans: Estimated Marginal Means, aka Least-Squares Means},
+    author = {Russell Lenth},
+    year = {2020},
+    note = {R package version 1.4.5},
+    url = {https://CRAN.R-project.org/package=emmeans},
+  }
