--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -480,7 +480,13 @@ The eHRAF provides information on the time frame of field work associated with e
 doc_fielddates_plot
 ```
 
+## Continental region is confounded with mode of subsistence
 
+```{r regionsubsistence, fig.cap=""}
+ggplot(all_data2b) + geom_mosaic(aes(x = product(subsistence, region), fill = subsistence)) + scale_fill_viridis(discrete = T) + theme_minimal(15)
+```
+
+## Bias
 
 ```{r eHRAFpages, fig.height=8, fig.cap="Scatterplot of the number of leadership text records versus the total number of pages of ethnography in the eHRAF. Each dot is one culture. Line fit by loess regression."}
 plot_pages_tr
