Minor chnage in MS.

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -479,7 +479,7 @@ The majority of ethnographic documents sampled here (`r doc_1950_perc`%) were pu
 doc_year_hist
 ```
 
-The eHRAF provides information on the time frame of field work associated with each document. For some documents the span of associated fieldwork is given for the exact months and years the ethnographer was in the field. For most documents one or more spans of years are given. Figure \@ref(fig:field-years) plots the earliest year and the latest year for which field work occurred for each document. The time spans plotted do not depict the full span of fieldwork necessarily, but simply illustrate the time span during which fieldwork occurred. We omitted data for three documents (two from North America and one from Insular Pacific) with field work date ranges prior to 1870. For all documents, the average earliest year in which field work occurred was `r signif(mean(documents$d_field_date_start, na.rm=T),4)` and the average latest years in which field work occurred was `r signif(mean(documents$d_field_date_end, na.rm=T),4)`. 
+The eHRAF provides information on the time frame of field work associated with each document. For some documents the span of associated fieldwork is given for the exact months and years the ethnographer conducted fieldwork. For most documents one or more spans of years are given. Figure \@ref(fig:field-years) plots the earliest year and the latest year for which field work occurred for each document. The time spans plotted do not depict the full span of fieldwork necessarily, but simply illustrate the time span during which fieldwork occurred. We omitted data points from  one document from North America with very early field work prior to 1805 for clarity. For all documents, the average earliest year in which field work occurred was `r signif(mean(documents$d_field_date_start, na.rm=T),4)` and the average latest years in which field work occurred was `r signif(mean(documents$d_field_date_end, na.rm=T),4)`. 
 
 ```{r field-years, fig.height=8, fig.width=9, fig.cap="Span of fieldwork years of study documents. To improve clarity, one document with very early fieldwork from 1791-1804 was omitted."}
 doc_fielddates_plot
